2009-05-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-17
        * Restore old ROD directory name

2009-05-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-16
        * Minor updates to CPM and ROD monitoring

2009-05-05 Alan Watson <Alan.Watson@cern.ch>
        * Tag as TrigT1CaloMonitoring-00-04-15
        * Change dependencies from TrigT1CaloTools to TrigT1CaloToolInterfaces

2009-04-08 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-14
	* Joboptions improvement simulation <-> data

2009-03-26 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-13
	* Fix root Warnings, remove saturation from error histogram

2009-02-05  Alan Watson  <Alan.Watson@cern.ch>
        * Tag as TrigT1CaloMonitoring-00-04-12
        * Compatability with splitting of TrigT1Calo into TrigT1CaloEvent
          and TrigT1CaloUtils

2009-01-07  scott s snyder  <snyder@bnl.gov>

	* Tag as TrigT1CaloMonitoring-00-04-11
	* src/JEPTransPerfMon.cxx: Fix compilation warnings.

2009-01-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-10
        * Fix for Savannah bug #45532

2008-11-28 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-09
	* checkreq fix
	
2008-11-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-08
        * Try to get current tag back to HEAD.

2008-11-19 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-07
	* Memory leak corrected

2008-11-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-06
        * Take account of Limited RoI Set bit in CP RoI comparison with simulation.
        * Add separate EM/Tau RoI hitmaps.
        * Update list of ignored Triggertowers for CP monitoring.

2008-11-05 Andrea Neusiedl <andrea.neusiedl@cern.ch>